# castle-python

./: .gitignore  .travis.yml  CHANGELOG.rst  DEVELOPMENT.md  DEVELOPMENT.rst  HISTORY.md  HISTORY.rst  Makefile  README.md  README.rst  RELEASING.md  RELEASING.rst  pylintrc  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: lint.yml  specs.yml
castle/: __init__.py  api.py  api_request.py  client.py  command.py  configuration.py  errors.py  events.py  exceptions.py  failover_response.py  headers.py  headers_filter.py  headers_formatter.py  logger.py  request.py  response.py  review.py  secure_mode.py  session.py  singleton_configuration.py  system.py  utils.py  verdict.py  version.py
castle/api/: approve_device.py  get_device.py  get_devices.py  get_devices_for_user.py  report_device.py  review.py
castle/apis/: request.py  response.py  session.py  session_sharer.py
castle/client_id/: extract.py
castle/commands/: approve_device.py  authenticate.py  end_impersonation.py  filter.py  get_device.py  get_devices.py  get_devices_for_user.py  identify.py  impersonate.py  log.py  report_device.py  review.py  risk.py  start_impersonation.py  track.py  with_context.py
castle/context/: default.py  get_default.py  merge.py  merger.py  prepare.py  sanitize.py  sanitizer.py
castle/core/: process_response.py  process_webhook.py  send_request.py
castle/extractors/: client_id.py  headers.py  ip.py
castle/failover/: prepare_response.py  strategy.py
castle/fingerprint/: extract.py
castle/headers/: extract.py  (+2 more)
fern/: README.md  generators.yml
(+116 files in other folders)
